@@ -6,6 +6,8 @@ software-center (3.1.21) UNRELEASED; urgency=low
   * softwarecenter/view/softwarepane.py: 
     - quick string fix to remove space between text and question marks
       in search result suggestion strings (LP: #725966)
+  * softwarecenter/view/appdetailsview_gtk.py:
+    - usefulness label updates (LP: #725679)
 
   [ Michael Vogt ]
   * merged lp:~mvo/software-center/weblive that contians the remaining
